# Rust-gRPC

./: Cargo.toml  README.md
proto/: payments.proto
src/: client.rs  server.rs
