[package]
name = "Rust-gRPC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8.2" # gRPC implementation for Rust
prost = "0.11.0" # ProtoBuf implementation for Rust
tokio = {verison = "1.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.8.2"
